--- a/openara/templates/base.html
+++ b/openara/templates/base.html
@@ -80,7 +80,7 @@
                     </div>
                     {% endcomment %}
                     <ul class="nav navbar-nav navbar-right">
-                        <li class="{% if currentNode.get_url == '/' %}active{% endif %}"><a href="/">Acceuil</a></li>
+                        <li class="{% if currentNode.get_url == '/' %}active{% endif %}"><a href="/">Accueil</a></li>
                         {% comment %}
                         <li class="{% if currentNode.get_url == '/register/' %}active{% endif %}"><a href="/register/">Register</a></li>
                         <li class="{% if currentNode.get_url == '/register/' %}active{% endif %}"><a href="/subscribe/">Subscribe</a></li>
