ajouts Louise, ChantierLibre, Bricodeurs

--- a/openara/templates/we-are-makers.html
+++ b/openara/templates/we-are-makers.html
@@ -12,8 +12,6 @@
                 <ul class="social">
                     <li><a class="fa fa-twitter solo" href="https://twitter.com/fablablyon"><span>Twitter</span></a></li> 
                     <li><a class="fa fa-facebook solo" href="https://fr-fr.facebook.com/fabrique.dobjetslibres"><span>Facebook</span></a></li>
-            <!--    <li><a class="fa fa-external-link solo" href="http://www.fablab-lyon.fr/"><span>site</span></a></li> -->
-
                 </ul>
 
                 </footer>
@@ -30,7 +28,7 @@
                     
         <ul class="social">
                 <li><a class="fa fa-facebook solo"href="https://fr-fr.facebook.com/pages/La-Paillasse-Sa%C3%B4ne-eco-hacklab-lyonnais/648362331890903"><span>site</span></a></li> 
-                    <li><a class="fa fa-twitter solo" href="https://twitter.com/lapaillassaone"><span>Twitter</span></a></li>
+                <li><a class="fa fa-twitter solo" href="https://twitter.com/lapaillassaone"><span>Twitter</span></a></li>
 
                 </ul> 
 
@@ -198,8 +196,7 @@
                     </footer>
                 </section>
         </div>
-        
-        
+             
         <div class="list-item col-md-4">
                 <section class="box">
                     <a href="http://www.ootsidebox.com" class="image"><img src="/static/we-are-makers/ootsidebox.png" alt="" /></a>
@@ -216,8 +213,7 @@
                     </ul>
                     </footer>
                 </section>                                          
-        </div>
-            
+        </div>            
         
         <div class="list-item col-md-4">
                 <section class="box">
@@ -236,7 +232,59 @@
                 </section>                                          
         </div>
 
+        <div class="list-item col-md-4">
+            <section class="box">
+                <a href="http://chantierlibre.org/" class="image image-full"><img src="/static/we-are-makers/chantierlibre.png" alt="" /></a>
+                <header>
+                    <h3>Chantier Libre</h3>
+                </header>
+                FabLab et logiciel libre autour de Roanne
+                <footer>
 
+                <ul class="social">
+                    <li><a class="fa fa-twitter solo" href="https://twitter.com/chantier_libre"><span>twitter</span></a></li>
+                </ul>
+                </footer>
+            </section>
+        </div>
+                                           
+        <div class="list-item col-md-4">
+
+                <section class="box">
+                    <a href="http://www.lesusineslouise.com/" class="image image-full"><img src="/static/we-are-makers/lesusineslouise.png" alt="" /></a>
+                    <header>
+                        <h3>Les Usines Louises</h3>
+                    </header>
+                    Makerspace au bord de la rivière d'Ain.
+                    Expérimentation et créativité pour le développement de solutions durables et frugales. 
+                    <footer>
+
+                    <ul class="social">
+                        <li><a class="fa fa-tumblr solo" href="http://lesusineslouise.tumblr.com/"><span>tumblr</span></a></li>
+                        <li><a class="fa fa-facebook solo" href="https://www.facebook.com/LesUsinesLouise"><span>Facebook</span></a></li>
+                    </ul>
+
+                    </footer>
+                </section>
+        </div>
+
+        <div class="list-item col-md-4">
+            <section class="box">
+                <a href="http://lesgeeksdudimanche.github.io/" class="image image-full"><img src="/static/we-are-makers/lesbricodeurs.png" alt="" /></a>
+                <header>
+                    <h3>Les Bricodeurs</h3>
+                </header>
+                Les bricodeurs est un groupe d'échange et d'entraide autour de projets technologiques. L'objectif de mettre ces connaissances à profit pour aider des projets citoyens et contribuer à la diffusion de la culture numérique.
+
+                <footer>
+                    <ul class="social">
+                        <li><a class="fa fa-facebook solo" href="https://www.facebook.com/groups/1779441092280415/"><span>Facebook</span></a></li>
+                        <li><a class="fa fa-twitter solo" href="https://twitter.com/lesbricodeurs"><span>twitter</span></a></li>
+                    </ul>
+                </footer>
+            </section>
+        </div>
+        
 </div> <!-- quisertarien -->
 
 {% addtoblock "css" %}
