updated fol description

--- a/openara/templates/content/page.html
+++ b/openara/templates/content/page.html
@@ -266,6 +266,7 @@
             <h4 class="ui inverted header">Network</h4>
             <div class="ui inverted link list">
               <a class="item" href="https://github.com/openara/website/" target="_blank">Dépôt GitHub</a>
+              <a class="item" href="/login/" target="_blank">Login</a>
             </div>
           </div>
           <div class="seven wide right floated column">
