--- a/openara/templates/we-are-makers.html
+++ b/openara/templates/we-are-makers.html
@@ -5,9 +5,9 @@
             <section class="box">
                 <a href="http://www.fablab-lyon.fr/" class="image"><img src="/static/we-are-makers/fol.png" alt="" /></a>
                 <header>
-                    <h3>Fabrique des objets libres</h3>
+                    <h3>Fabrique d'objets libres</h3>
                 </header>
-                <p></p>
+                <p>Fablab ouvert à tous. Facilitateur de création, de fabrication et de réparation d’objets de toutes sortes.  Formations à l’impression 3D, à la découpe laser, à l’électronique Arduino etc. Ateliers de bidouillage, détournement d’objets. Aide aux projets individuels. Soutien aux projets collectifs de la communauté.</p>
                 <footer>
 
                 <ul class="social">
@@ -73,7 +73,7 @@
             
         <div class="list-item col-md-4">
                 <section class="box">
-                    <a href="http://www.legitenumerique.com/fr/" class="image"><img src="/static/we-are-makers/gitenumerique.png" alt="" /></a>
+                    <a href="http://www.legitenumerique.com/fr/" class="image"><img src="/static/we-are-makers/logo-lgn-front.png" alt="" /></a>
                     <header>
                         <h3>Le gite numérique</h3>
                     </header>
