--- a/openara/templates/base.html
+++ b/openara/templates/base.html
@@ -71,9 +71,8 @@
                     
                     <ul class="nav navbar-nav navbar-right">
                         <li class="{% if currentNode.get_url == '/' %}active{% endif %}"><a href="/">Accueil</a></li>
-                        {% if request.user.is_staff %}
+                        {% if request.user.is_authenticated %}
                         <li class="{% if currentNode.get_url == '/documentation/' %}active{% endif %}"><a href="/documentation/">Documentation</a></li>
-                        <li class="{% if currentNode.get_url == '/documentation/' %}active{% endif %}"><a href="/documentation/">Labs</a></li>
                         <li class="{% if currentNode.get_url == '/logout/' %}active{% endif %}"><a href="/logout/">Déconnexion</a></li>
                         {% endif %}
                         
